// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              content
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content",
      "id": "default",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. tabType: card - line is default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties. tabType: card - line is default",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "card",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.activeKey: content_two - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "activeKey": "content_two",
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.activeKey: content_two",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.animated: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": false,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.animated: false",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.defaultActiveKey: content_three - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_three",
      "id": "properties.defaultActiveKey: content_three",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.extraAreaKey - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.extraAreaKey",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarExtraContent": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content_two
      </div>,
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: large - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.size: large",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "large",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.size: small",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "small",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.tabPosition: bottom - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.tabPosition: bottom",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "bottom",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.tabPosition: left - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.tabPosition: left",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "left",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.tabPosition: right - top is default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.tabPosition: right - top is default",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "right",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.tabs.disabled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          disabled={true}
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          disabled={true}
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.tabs.disabled",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.tabs.icon - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              <IconBlock
                actions={Object {}}
                blockId="properties.tabs.icon_icon"
                content={Object {}}
                list={Array []}
                menus={Array []}
                methods={
                  Object {
                    "callAction": [Function],
                    "makeCssClass": [Function],
                    "registerAction": [Function],
                    "registerMethod": [Function],
                  }
                }
                properties="WarningOutlined"
                required={false}
                user={Object {}}
                validation={
                  Object {
                    "errors": Array [],
                    "status": null,
                    "warnings": Array [],
                  }
                }
              />
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              <IconBlock
                actions={Object {}}
                blockId="properties.tabs.icon_icon"
                content={Object {}}
                list={Array []}
                menus={Array []}
                methods={
                  Object {
                    "callAction": [Function],
                    "makeCssClass": [Function],
                    "registerAction": [Function],
                    "registerMethod": [Function],
                  }
                }
                properties="SaveOutlined"
                required={false}
                user={Object {}}
                validation={
                  Object {
                    "errors": Array [],
                    "status": null,
                    "warnings": Array [],
                  }
                }
              />
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.tabs.icon",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.tabs.key - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              content_one
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              content_two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              content_three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.tabs.key",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.tabs.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "animated": true,
      "children": Array [
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title One
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Two
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
        <mockConstructor
          tab={
            <span
              className="css-0"
            >
              Title Three
            </span>
          }
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_three
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "id": "properties.tabs.title",
      "onChange": [Function],
      "onTabClick": [Function],
      "onTabScroll": [Function],
      "size": "default",
      "tabBarStyle": Object {},
      "tabPosition": "top",
      "type": "line",
    },
    Object {},
  ],
]
`;
